# SourceIndexer

./: CMakeLists.txt  codeindexer.cpp  codeindexer.h  indexerconfig.cpp  indexerconfig.h  indexerconfigdialog.cpp  indexerconfigdialog.h  indexerworker.cpp  indexerworker.h  indexprogressdialog.cpp  indexprogressdialog.h  main.cpp  projectdetector.cpp  projectdetector.h  storage.cpp  storage.h
